Fixed Alignment for Mobile

--- a/src/app.scss
+++ b/src/app.scss
@@ -42,23 +42,20 @@ section {
 
 }
 
-// @mixin mobile{
-//     @media (max-width:738px){
-//         @content;
-//     }
-// }
-// @mixin mobile{
-//     @media (max-width:1024px){
-//         @content;
-//     }
-// }
-// @mixin mobile{
-//     @media (max-width:1366px){
-//         @content;
-//     }
-// }
+@mixin mobile {
+    @media (max-width:738px) {
+        @content;
+    }
+}
+
 @mixin mobile {
     @media (max-width:1024px) {
+        @content;
+    }
+}
+
+@mixin mobile {
+    @media (max-width:1366px) {
         @content;
     }
 }
