--- a/src/components/timeline/timeline.scss
+++ b/src/components/timeline/timeline.scss
@@ -1,11 +1,22 @@
+@import "../../app.scss";
+
 .timeline {
   position: relative;
   max-width: 1200px;
   margin: 100px auto;
   padding: 20px;
+  opacity: 0;
+  transform: translateY(50px);
+  transition: opacity 0.5s ease, transform 0.5s ease;
+
+  @include mobile {
+    padding-top: 10px;
+  }
+}
+
+.timeline.visible {
   opacity: 1;
   transform: translateY(0);
-  transition: opacity 0.5s ease, transform 0.5s ease;
 }
 
 .timeline-line {
@@ -21,26 +32,47 @@
 .event {
   padding: 10px 40px;
   position: relative;
+  background-color: inherit;
   width: 50%;
+  opacity: 0;
+  transform: translateX(-50px);
+  transition: opacity 0.5s ease, transform 0.5s ease;
+  transition-delay: 0.2s;
+
+
+
+
+}
+
+.timeline.visible .event {
   opacity: 1;
   transform: translateX(0);
-  transition: opacity 0.5s ease, transform 0.5s ease;
 }
 
 .event.right {
   left: 50%;
+  transform: translateX(50px);
+}
+
+.timeline.visible .event.right {
+  transform: translateX(0);
 }
 
 .event-content {
   padding: 20px;
   background-color: white;
+  position: relative;
   border-radius: 6px;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-  min-height: 100px;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  position: relative;
+  transition: transform 0.3s ease;
+
+  @include mobile {
+    padding: 15px;
+  }
+}
+
+.event-content:hover {
+  transform: scale(1.05);
 }
 
 .event-dot {
@@ -51,8 +83,60 @@
   top: 24px;
   right: -10px;
   border: 4px solid #fff;
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
 }
 
 .event.right .event-dot {
   left: -10px;
+}
+
+.event h3 {
+  margin: 0;
+  color: #333;
+  font-size: 16px;
+
+  @include mobile {
+    font-size: 12px
+  }
+}
+
+.event h4 {
+  margin: 10px 0;
+  color: #fff;
+  font-size: 20px;
+
+  @include mobile {
+    font-size: 15px
+  }
+
+}
+
+.event p {
+  margin: 0;
+  color: #f0f0f0;
+  font-size: 14px;
+
+  @include mobile {
+    font-size: 10px
+  }
+}
+
+@include mobile {
+  .timeline-line {
+    left: 31px;
+  }
+
+  .event {
+    width: 100%;
+    padding-left: 70px;
+    padding-right: 25px;
+  }
+
+  .event.right {
+    left: 12px;
+  }
+
+  .event-dot {
+    left: 2px;
+  }
 }
